# viral_response

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: antiphage-cycogs.ipynb  antiphageCycogs-NEW-CLUSTER.ipynb  lab-expressed-viral-infection-cycogs.ipynb
poetry-viral-env/: pyproject.toml
scripts/: blastx.sh  genome_to_cycogids.py
