[tool.poetry]
name = "viral_response"
version = "0.1.0"
description = "exploring viral response of cyanobacteria"
authors = ["s-joshid <j.dhruvi89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
jupyter = "^1.0.0"
seaborn = "^0.12.2"
argparse = "^1.4.0"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
